--- a/snake/src/Game.css
+++ b/snake/src/Game.css
@@ -1,3 +1,19 @@
+table {
+    border-collapse: collapse;
+}
+
+td {
+    padding: 0px;
+    margin: 0px;
+}
+
+.square {
+    width: 15px;
+    height: 15px;
+    border: 1px solid black;
+    vertical-align: center;
+}
+
 .empty {
     background-color: white;
 }
