--- a/snake/src/Board.css
+++ b/snake/src/Board.css
@@ -1,5 +1,6 @@
 table {
     border-collapse: collapse;
+    border: 1px solid black;
 }
 
 td {
@@ -10,7 +11,7 @@ td {
 .square {
     width: 15px;
     height: 15px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     vertical-align: center;
     background-color: white;
 }
